# power-market-analytics

./: .dockerignore  .env.template  .gitignore  CLAUDE.md  LICENSE  README.md  docker-compose.yaml  justfile  pyproject.toml
.claude/: settings.json
.devcontainer/: devcontainer.json
conf/schemas/: jepx_spot.yaml  jma_hourly_amedas.yaml  jma_hourly_staffed.yaml
conf/spark/: hive-site.xml  spark-defaults.conf
dbt/: dbt_project.yml  profiles.yml
dbt/dbt_tests/: assert_fct_jepx_spot_area_price_rowcount.sql  assert_std_jepx__spot_calendar_complete.sql
dbt/models/curated/: dim_area.sql  dim_area.yml  dim_date.sql  dim_date.yml  dim_delivery_period.sql  dim_delivery_period.yml  dim_jma_station.sql  dim_jma_station.yml  fct_jepx_spot_area_price.sql  fct_jepx_spot_area_price.yml  fct_jepx_spot_market.sql  fct_jepx_spot_market.yml  fct_jma_weather_hourly.sql  fct_jma_weather_hourly.yml
dbt/models/example/: smoke_test.sql
dbt/seeds/: jepx_areas.csv  jma_stations.csv  jpn_national_holidays.csv
docker/devcontainer/: Dockerfile
docker/docsify/: Dockerfile
docker/hive-metastore/: Dockerfile
docker/spark/: Dockerfile
docs/: JMA-Weather-Data-Retrieval.md  Kimball-Dimensional-Modeling-Techniques.md  README.md  _sidebar.md  index.html
scripts/: download_jepx_spot.py  download_jma_hourly.py  download_jma_hourly_all.py  download_jma_stations.py  load_jepx_spot.py  load_jma_hourly.py  spot_price_backtest.py  update_holidays_seed.py  update_jma_stations_seed.py
src/power_market_analytics/: __init__.py  csv_loader.py  jepx.py  jma.py  jma_loader.py  spark.py
(+26 files in other folders)
