[project]
name = "power-market-analytics"
version = "0.1.0"
description = "Power market analytics"
readme = "docs/README.md"
requires-python = ">=3.13"
dependencies = [
    "dbt-core>=1.11.10",
    "dbt-spark[pyhive]>=1.10.1",
    "mlflow>=3.12.0",
    "pandas>=2.3.3",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "pyspark[ml,pandas-on-spark]==4.1.1",
]
